[workspace]
members = ["."]

[package]
name = "rinja_derive_standalone"
version = "0.3.4"
description = "Procedural macro package for Rinja"
homepage = "https://github.com/rinja-rs/rinja"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[features]
default = ["__standalone"]
__standalone = []

code-in-doc = ["dep:pulldown-cmark"]
config = ["dep:serde", "dep:basic-toml", "parser/config"]
humansize = []
urlencode = []
serde_json = []
num-traits = []
with-actix-web = []
with-axum = []
with-rocket = []
with-warp = []

[dependencies]

[dev-dependencies]
console = "0.15.8"
criterion = "0.5"
prettyplease = "0.2.20"
similar = "2.6.0"
syn = { version = "2.0.3", features = ["full"] }

[[bench]]
name = "derive-template"
harness = false
required-features = ["__standalone"]
