# In a real application you would not need this section. It is only used in here, so that this
# example can have a more lenient MSRV (minimum supported rust version) than rinja as a whole.
[workspace]
members = ["."]

[package]
name = "actix-web-app"
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
